# calculator

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  oreo  style.css
assets/: style.css
pkg/: calc.d.ts  calc.js  calc_bg.wasm  calc_bg.wasm.d.ts  package.json
src/: expression.rs  func.rs  lib.rs  main.rs  my_lib.rs  mylib.rs  operator.rs  oreo  oreo.c
src/calculation/: mod.rs  result.rs  state.rs
src/notation/: mod.rs  trait.rs  type.rs
ui/: appwindow.slint
