[package]
name = "calc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
clipboard = "0.5.0"
dark-light = "1.1.1"
slint = "1.10.0"

[build-dependencies]
slint-build = "1.12.1"


[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
debug = false
overflow-checks = false
panic = "abort"
strip = true

[features]
wayland = []


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
